force-app/main/default/objects/Payment__c/fields/AmountInBase__c.field-meta.xml
<CustomField>
    <fullName>AmountInBase__c</fullName>
    <label>Amount in base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>