force-app/main/default/objects/Payment__c/fields/ExternalRef__c.field-meta.xml
<CustomField>
    <fullName>ExternalRef__c</fullName>
    <description>Optional provider/bank reference.</description>
    <label>External Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>