force-app/main/default/objects/Payment__c/fields/FxError__c.field-meta.xml
<CustomField>
    <fullName>FxError__c</fullName>
    <label>Fx Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>