force-app/main/default/objects/Payment__c/fields/FxLastUpdatedAt__c.field-meta.xml
<CustomField>
    <fullName>FxLastUpdatedAt__c</fullName>
    <label>Fx Last Updated At</label>
    <type>DateTime</type>
</CustomField>