force-app/main/default/objects/Payment__c/fields/FxRate__c.field-meta.xml
<CustomField>
    <fullName>FxRate__c</fullName>
    <label>Fx Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>