force-app/main/default/objects/Payment__c/fields/PaymentDateTime__c.field-meta.xml
<CustomField>
    <fullName>PaymentDateTime__c</fullName>
    <label>Payment Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>