force-app/main/default/objects/Payment__c/fields/PaymentKey__c.field-meta.xml
<CustomField>
    <fullName>PaymentKey__c</fullName>
    <description>Optional external key for imports/mapping.</description>
    <externalId>true</externalId>
    <label>Payment Key</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>